# micrograd

./: pyproject.toml  scratch.ipynb
src/micrograd/: lib.py
