[project]
name = "micrograd"
version = "0.1.0"
description = "Copy of micrograd tutorial by Andrej Karpathy"
authors = [{ name = "Sebastian Barrios", email = "sbarrios93@gmail.com" }]
dependencies = ["numpy>=1.26.3", "matplotlib>=3.8.2", "torch>=2.2.0"]
requires-python = "==3.12.*"
readme = "README.md"
license = { text = "MIT" }


[project.optional-dependencies]
dev = ["ipykernel>=6.29.0", "ruff>=0.2.0", "graphviz>=0.20.1"]
[tool.pdm]
distribution = false
